tests/fail/src/tester.h
#ifndef GTKDOC_TESTER_H
#define GTKDOC_TESTER_H

#include <glib.h>

/**
 * Bug568711:
 *
 * Here we document the enum but not the values.
 **/
typedef enum {
    BUG_568711_ENUM_1,
    BUG_568711_ENUM_2,
} Bug568711;



#endif // GTKDOC_TESTER_H

